--- a/estilos.css
+++ b/estilos.css
@@ -6,17 +6,18 @@
 }
 body {
     background-color: hsl(212, 45%, 89%);
+    height:100vh;
 }
 main {
     display: flex;
-    justify-content: center;   
+    justify-content: center;     
 }
 section {
-    background-color: hsl(0, 0%, 100%);
-    margin: 100px 0;
+    margin: 150px 0;
     padding: 15px;
     border-radius: 10px;
-    width: 20%;
+    width: min(80vw,300px);
+    background-color: hsl(0, 0%, 100%);
     box-shadow: 1px 1px 50px 1px rgba(0, 0, 0, 0.2);
 }
 img {
@@ -43,11 +44,11 @@ p {
     padding: 10px;
     margin-right: 15px;
 }
-
+/* 
 @media screen and (max-width: 375px) {
     
     section {
         width: 85%;
     }
     
-}
+} */
