--- a/estilos.css
+++ b/estilos.css
@@ -15,24 +15,24 @@ main {
 section {
     margin: 150px 0;
     padding: 15px;
-    border-radius: 10px;
+    border-radius: 20px;
     width: min(80vw,300px);
     background-color: hsl(0, 0%, 100%);
     box-shadow: 1px 1px 50px 1px rgba(100, 100, 100, 0.2);
 }
 img {
     width: 100%;
-    border-radius: 8px;
+    border-radius: 15px;
 }
 h1 {
-    font-size: 22px;
+    font-size: clamp(1.1rem, 1.0429rem + 0.2857vw, 1.5rem);
     font-weight: 700;
     color:hsl(218, 44%, 22%);
     text-align: center;
     margin: 20px 0;
 }
 p {
-    font-size:15px;
+    font-size: clamp(0.938rem, 0.9149rem + 0.1157vw, 1.1rem);
     font-weight: 400;
     color:hsl(220, 15%, 55%);
     text-align: center;
